[package]
name = "whichlang"
version = "0.1.0"
authors = ["Ben D'Angelo <ben@bendangelo.me>"]
edition = "2021"

[dependencies]
whichlang = "0.1.0"

[lib]
crate-type = ["dylib"]

[build]
target = "x86_64-unknown-linux-musl"

[target.'cfg(target_os = "linux")']
rustflags = ["-C", "linker=ld.lld", "-C", "relocation-model=static", "-C", "strip=symbols"]
